# yolox

./: .gitignore  README.md  commands.txt  host.sh  payload_contents.py  run_accelmode.py  run_modelsdk.py  run_onnx.py  start.py  stop.py  utils.py  yolox_surgery_no_reshape.py
FINAL_yolox_s_opt_no_reshapes_mpk_rtspsrc/core/allocator/: gstsimaaiallocator_old.h
FINAL_yolox_s_opt_no_reshapes_mpk_rtspsrc/core/caps/: gstsimaaicaps.h
FINAL_yolox_s_opt_no_reshapes_mpk_rtspsrc/core/dispatcher-lite/: dispatcher.c  simamm.c
FINAL_yolox_s_opt_no_reshapes_mpk_rtspsrc/core/metadata/: gstsimaaimeta.h
FINAL_yolox_s_opt_no_reshapes_mpk_rtspsrc/dependencies/gst_app/: mqtt_client.h
FINAL_yolox_s_opt_no_reshapes_mpk_rtspsrc/dependencies/gst_app/live_trace_reader/plugins/kpi_sender/: CMakeLists.txt  trace.h
FINAL_yolox_s_opt_no_reshapes_mpk_rtspsrc/dependencies/gst_app/utils/src/: string_utils.cpp
FINAL_yolox_s_opt_no_reshapes_mpk_rtspsrc/plugins/processcvu/: gstsimaaiprocesscvu.cpp
FINAL_yolox_s_opt_no_reshapes_mpk_rtspsrc/plugins/yolox_postproc_overlay/: payload.py
WORK_yolox_s_opt_no_reshapes_mpk_rtspsrc/: application.json
WORK_yolox_s_opt_no_reshapes_mpk_rtspsrc/core/: CMakeLists.txt
WORK_yolox_s_opt_no_reshapes_mpk_rtspsrc/core/allocator/: CMakeLists.txt  README.md  gstsimaaiallocator.h
WORK_yolox_s_opt_no_reshapes_mpk_rtspsrc/core/dispatcher-lite/: ev_dispatcher.c  host_dispatcher.h
WORK_yolox_s_opt_no_reshapes_mpk_rtspsrc/core/simamm/: CMakeLists.txt  simamm.c
WORK_yolox_s_opt_no_reshapes_mpk_rtspsrc/core/utils/: utils_string.c
WORK_yolox_s_opt_no_reshapes_mpk_rtspsrc/dependencies/gst_app/: manifest_parser.h
WORK_yolox_s_opt_no_reshapes_mpk_rtspsrc/dependencies/gst_app/live_trace_reader/plugins/kpi_sender/: json_glib_helper.h  trace.c
WORK_yolox_s_opt_no_reshapes_mpk_rtspsrc/dependencies/gst_app/utils/include/: cmdline_utils.h  file_utils.h
WORK_yolox_s_opt_no_reshapes_mpk_rtspsrc/plugins/processcvu/: CMakeLists.txt  nlohmann_helpers.h
WORK_yolox_s_opt_no_reshapes_mpk_rtspsrc/plugins/processmla/: gstsimaaiprocessmla.cpp
WORK_yolox_s_opt_no_reshapes_mpk_rtspsrc/plugins/yolox_postproc_overlay/: payload.py
get_fps/apis/: README.md  mla_rt_client.py  pipeline.py  remote_runner.py  requirements.txt
get_fps/network_eval/: mpk_attributes.py  network_eval.py
get_fps/utils/: __init__.py  common_utils.py  connection_params.py  ssh_utils.py  topk.py
gst_pipeline/: application.json
gst_pipeline/.project/: pluginsInfo.json
gst_pipeline/core/allocator/: gstsimaaiallocator2.cpp
gst_pipeline/core/allocator/test/: test_allocator.cc
gst_pipeline/core/buffer-pool/: CMakeLists.txt
gst_pipeline/core/dispatcher-lite/: dispatcher.h  ev_dispatcher.h  simamm.h  utils.h
gst_pipeline/core/metadata/: gstsimaaimeta.cpp
gst_pipeline/core/simamm/: simamm.h
gst_pipeline/core/utils/: CMakeLists.txt
gst_pipeline/dependencies/gst_app/: gst_app_utils.h  pipeline.h
gst_pipeline/dependencies/gst_app/live_trace_reader/api/: live_trace_reader_api.c
gst_pipeline/dependencies/gst_app/live_trace_reader/plugins/kpi_sender/: kpi.h
gst_pipeline/dependencies/gst_app/utils/src/: file_utils.cpp  lttng_session.cpp
gst_pipeline/plugins/processcvu/: README.md
gst_pipeline/plugins/yolov8_pygast_postproc/: yolov8_postproc.py
yolox_s_opt_no_reshapes_mpk_rtspsrc/: .hash  application.json
yolox_s_opt_no_reshapes_mpk_rtspsrc/.project/: pluginsInfo.json
yolox_s_opt_no_reshapes_mpk_rtspsrc/core/allocator/: gstsimaaiallocationquery.cpp  gstsimaaiallocator.cc  gstsimaaiallocator_common.h  gstsimaaisegmentallocator.cpp  gstsimaaisegmentallocator.h
yolox_s_opt_no_reshapes_mpk_rtspsrc/core/allocator/test/: CMakeLists.txt
yolox_s_opt_no_reshapes_mpk_rtspsrc/core/buffer-pool/: gstsimaaibufferpool.cpp  gstsimaaibufferpool.h
yolox_s_opt_no_reshapes_mpk_rtspsrc/core/caps/: CMakeLists.txt  README.md  gstsimaaicaps.c
yolox_s_opt_no_reshapes_mpk_rtspsrc/core/dispatcher-lite/: CMakeLists.txt  dispatcher_common.h  handlers.h  host_dispatcher.c  mla_client.c  mla_client.h  mla_dispatcher.c  mla_dispatcher.h  utils.c
yolox_s_opt_no_reshapes_mpk_rtspsrc/core/metadata/: CMakeLists.txt
yolox_s_opt_no_reshapes_mpk_rtspsrc/core/utils/: utils_string.h
yolox_s_opt_no_reshapes_mpk_rtspsrc/dependencies/gst_app/: CMakeLists.txt  README.md  gst_app.cpp  gst_app_utils.cpp  manifest_parser.cpp  mqtt_client.cpp  pipeline.cpp  run.sh
yolox_s_opt_no_reshapes_mpk_rtspsrc/dependencies/gst_app/live_trace_reader/: CMakeLists.txt
yolox_s_opt_no_reshapes_mpk_rtspsrc/dependencies/gst_app/live_trace_reader/api/: live_trace_reader_api.h
yolox_s_opt_no_reshapes_mpk_rtspsrc/dependencies/gst_app/live_trace_reader/plugins/: CMakeLists.txt
yolox_s_opt_no_reshapes_mpk_rtspsrc/dependencies/gst_app/live_trace_reader/plugins/kpi_sender/: json_glib_helper.c  kpi.c  kpi_sender.c  kpi_sender.h  mqtt.c  mqtt.h  utils.c  utils.h
yolox_s_opt_no_reshapes_mpk_rtspsrc/dependencies/gst_app/tests/: test_param_parser.cpp  validate_gst_string.cpp  validate_manifest_json.cpp
yolox_s_opt_no_reshapes_mpk_rtspsrc/dependencies/gst_app/utils/: CMakeLists.txt
yolox_s_opt_no_reshapes_mpk_rtspsrc/dependencies/gst_app/utils/include/: lttng_session.h  string_utils.h
yolox_s_opt_no_reshapes_mpk_rtspsrc/dependencies/gst_app/utils/src/: cmdline_utils.cpp
yolox_s_opt_no_reshapes_mpk_rtspsrc/plugins/processcvu/: gstsimaaiprocesscvu.h
yolox_s_opt_no_reshapes_mpk_rtspsrc/plugins/processcvu/cfg/: 0_postproc.json  0_preproc.json
yolox_s_opt_no_reshapes_mpk_rtspsrc/plugins/processmla/: CMakeLists.txt  README.md  gstsimaaiprocessmla.h
yolox_s_opt_no_reshapes_mpk_rtspsrc/plugins/processmla/cfg/: 0_process_mla.json
yolox_s_opt_no_reshapes_mpk_rtspsrc/plugins/yolox_postproc_overlay/: payload.py  python_plugin_template.py
